[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "airflow-laminar"
authors = [{name = "the airflow-laminar authors", email = "3105306+timkpaine@users.noreply.github.com"}]
description = "Python Project Templates"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.9"
keywords = []
classifiers = []
dependencies = []

[project.urls]
Repository = "https://github.com/airflow-laminar"
Homepage = "https://airflow-laminar.github.io/"

[project.optional-dependencies]
develop = []

[tool.yardang]
title = "Laminar"
root = "profile/README.md"
cname = "airflow-laminar.github.io"
pages = []
use-autoapi = false
